externals/tecio/teciosrc/TECIO.h

EXTERNC tecio_API int32_t tecGeomRectangleBegin(
    void*   fileHandle,
    double  xMin,
    double  yMin,
    double  xMax,
    double  yMax,
    int32_t posCoordMode);
EXTERNC tecio_API int32_t tecGeomSquareBegin(
    void*   fileHandle,
    double  xMin,
    double  yMin,
    double  size,
    int32_t posCoordMode);
EXTERNC tecio_API int32_t tecGeomArrowheadSetInfo(
    void*   fileHandle,
    double  angle,
    int32_t attachment,
    double  size,
    int32_t style);
EXTERNC tecio_API int32_t tecGeomEllipseSetNumPoints(
    void*   fileHandle,
    int32_t numEllipsePoints);
EXTERNC tecio_API int32_t tecGeomSetClipping(
    void*   fileHandle,
    int32_t clipping);
EXTERNC tecio_API int32_t tecGeomSetLineInfo(
    void*   fileHandle,
    int32_t linePattern,
    double  patternLength,
    double  thickness,
    int32_t color);
EXTERNC tecio_API int32_t tecGeomSetMacroFunctionCmd(
    void*       fileHandle,
    char const* macroFunctionCmd);
EXTERNC tecio_API int32_t tecGeomSetScope(
    void*   fileHandle,
    int32_t scope);
EXTERNC tecio_API int32_t tecGeomAttachToZone(
    void*   fileHandle,
    int32_t zone);
EXTERNC tecio_API int32_t tecGeomFill(
    void*   fileHandle,
    int32_t fillColor);
EXTERNC tecio_API int32_t tecGeomEnd(
    void* fileHandle);
EXTERNC tecio_API int32_t tecCustomLabelsAddSet(
    void*       fileHandle,
    char const* labels);
EXTERNC tecio_API int32_t tecText2DBegin(
    void*       fileHandle,
    char const* string,
    double      x,
    double      y,
    int32_t     posCoordMode,
    double      height,
    int32_t     sizeUnits);
EXTERNC tecio_API int32_t tecText3DBegin(
    void*       fileHandle,
    char const* string,
    double      x,
    double      y,
    double      z,
    double      height,
    int32_t     sizeUnits);
EXTERNC tecio_API int32_t tecTextAttachToZone(
    void*   fileHandle,
    int32_t zone);
EXTERNC tecio_API int32_t tecTextBoxSetInfo(
    void*   fileHandle,
    int32_t boxType,
    int32_t lineColor,
    int32_t fillColor,
    double  lineThickness,
    double  margin);
EXTERNC tecio_API int32_t tecTextSetAnchor(
    void*   fileHandle,
    int32_t anchor);
EXTERNC tecio_API int32_t tecTextSetAngle(
    void*  fileHandle,
    double angle);
EXTERNC tecio_API int32_t tecTextSetClipping(
    void*   fileHandle,
    int32_t clipping);
EXTERNC tecio_API int32_t tecTextSetColor(
    void*   fileHandle,
    int32_t color);
EXTERNC tecio_API int32_t tecTextSetTypeface(
    void*       fileHandle,
    char const* family,
    int32_t     isBold,
    int32_t     isItalic);
EXTERNC tecio_API int32_t tecTextSetLineSpacing(
    void*  fileHandle,
    double lineSpacing);
EXTERNC tecio_API int32_t tecTextSetMacroFunctionCmd(
    void*       fileHandle,
    char const* macroFunctionCmd);
EXTERNC tecio_API int32_t tecTextSetScope(
    void*   fileHandle,
    int32_t scope);
EXTERNC tecio_API int32_t tecTextEnd(
    void* fileHandle);
EXTERNC tecio_API int32_t tecUserRecAdd(
    void*       fileHandle,
    char const* userRec);
EXTERNC tecio_API int32_t tecFileWriterFlush(
    void*          fileHandle,
    int32_t        numZonesToRetain,
    int32_t const* zonesToRetain);
EXTERNC tecio_API int32_t tecFileWriterClose(
    void** fileHandle);
/**
 * SZL file reading routines
 */

EXTERNC tecio_API int32_t tecCustomLabelsGetNumSets(
    void*    fileHandle,
    int32_t* numSets);
EXTERNC tecio_API int32_t
tecCustomLabelsGetSet(
    void*   fileHandle,
    int32_t whichSet,
    char**  labelSet);
EXTERNC tecio_API int32_t tecDataSetAuxDataGetItem(
    void*   fileHandle,
    int32_t whichItem,
    char**  name,
    char**  value);
EXTERNC tecio_API int32_t tecDataSetAuxDataGetNumItems(
    void*    fileHandle,
    int32_t* numItems);
EXTERNC tecio_API int32_t tecDataSetGetNumVars(
    void*    fileHandle,
    int32_t* numVars);