externals/tecio/teciosrc/tecio.f90


integer(c_int32_t) function tecGeomRectangleBegin( &
    fileHandle, &
    xMin, &
    yMin, &
    xMax, &
    yMax, &
    posCoordMode) &
    bind(c, name="tecGeomRectangleBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xMin
    real(c_double), value, intent(in)     :: yMin
    real(c_double), value, intent(in)     :: xMax
    real(c_double), value, intent(in)     :: yMax
    integer(c_int32_t), value, intent(in) :: posCoordMode
end function tecGeomRectangleBegin

integer(c_int32_t) function tecGeomSquareBegin( &
    fileHandle, &
    xMin, &
    yMin, &
    size, &
    posCoordMode) &
    bind(c, name="tecGeomSquareBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xMin
    real(c_double), value, intent(in)     :: yMin
    real(c_double), value, intent(in)     :: size
    integer(c_int32_t), value, intent(in) :: posCoordMode
end function tecGeomSquareBegin

integer(c_int32_t) function tecGeomArrowheadSetInfo( &
    fileHandle, &
    angle, &
    attachment, &
    size, &
    style) &
    bind(c, name="tecGeomArrowheadSetInfo")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: angle
    integer(c_int32_t), value, intent(in) :: attachment
    real(c_double), value, intent(in)     :: size
    integer(c_int32_t), value, intent(in) :: style
end function tecGeomArrowheadSetInfo

integer(c_int32_t) function tecGeomEllipseSetNumPoints( &
    fileHandle, &
    numEllipsePoints) &
    bind(c, name="tecGeomEllipseSetNumPoints")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: numEllipsePoints
end function tecGeomEllipseSetNumPoints

integer(c_int32_t) function tecGeomSetClipping( &
    fileHandle, &
    clipping) &
    bind(c, name="tecGeomSetClipping")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: clipping
end function tecGeomSetClipping

integer(c_int32_t) function tecGeomSetLineInfo( &
    fileHandle, &
    linePattern, &
    patternLength, &
    thickness, &
    color) &
    bind(c, name="tecGeomSetLineInfo")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: linePattern
    real(c_double), value, intent(in)     :: patternLength
    real(c_double), value, intent(in)     :: thickness
    integer(c_int32_t), value, intent(in) :: color
end function tecGeomSetLineInfo

integer(c_int32_t) function tecGeomSetMacroFunctionCmd( &
    fileHandle, &
    macroFunctionCmd) &
    bind(c, name="tecGeomSetMacroFunctionCmd")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in) :: fileHandle
    character(c_char), intent(in)  :: macroFunctionCmd(*)
end function tecGeomSetMacroFunctionCmd

integer(c_int32_t) function tecGeomSetScope( &
    fileHandle, &
    scope) &
    bind(c, name="tecGeomSetScope")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: scope
end function tecGeomSetScope

integer(c_int32_t) function tecGeomAttachToZone( &
    fileHandle, &
    zone) &
    bind(c, name="tecGeomAttachToZone")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
end function tecGeomAttachToZone

integer(c_int32_t) function tecGeomFill( &
    fileHandle, &
    fillColor) &
    bind(c, name="tecGeomFill")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: fillColor
    end function tecGeomFill

integer(c_int32_t) function tecGeomEnd( &
    fileHandle) &
    bind(c, name="tecGeomEnd")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in) :: fileHandle
end function tecGeomEnd

integer(c_int32_t) function tecCustomLabelsAddSet( &
    fileHandle, &
    labels) &
    bind(c, name="tecCustomLabelsAddSet")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in) :: fileHandle
    character(c_char), intent(in)  :: labels(*)
end function tecCustomLabelsAddSet

integer(c_int32_t) function tecText2DBegin( &
    fileHandle, &
    string, &
    x, &
    y, &
    posCoordMode, &
    height, &
    sizeUnits) &
    bind(c, name="tecText2DBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    character(c_char), intent(in)         :: string(*)
    real(c_double), value, intent(in)     :: x
    real(c_double), value, intent(in)     :: y
    integer(c_int32_t), value, intent(in) :: posCoordMode
    real(c_double), value, intent(in)     :: height
    integer(c_int32_t), value, intent(in) :: sizeUnits
end function tecText2DBegin

integer(c_int32_t) function tecText3DBegin( &
    fileHandle, &
    string, &
    x, &
    y, &
    z, &
    height, &
    sizeUnits) &
    bind(c, name="tecText3DBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    character(c_char), intent(in)         :: string(*)
    real(c_double), value, intent(in)     :: x
    real(c_double), value, intent(in)     :: y
    real(c_double), value, intent(in)     :: z
    real(c_double), value, intent(in)     :: height
    integer(c_int32_t), value, intent(in) :: sizeUnits
end function tecText3DBegin

integer(c_int32_t) function tecTextAttachToZone( &
    fileHandle, &
    zone) &
    bind(c, name="tecTextAttachToZone")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
end function tecTextAttachToZone

integer(c_int32_t) function tecTextBoxSetInfo( &
    fileHandle, &
    boxType, &
    lineColor, &
    fillColor, &
    lineThickness, &
    margin) &
    bind(c, name="tecTextBoxSetInfo")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: boxType
    integer(c_int32_t), value, intent(in) :: lineColor
    integer(c_int32_t), value, intent(in) :: fillColor
    real(c_double), value, intent(in)     :: lineThickness
    real(c_double), value, intent(in)     :: margin
end function tecTextBoxSetInfo

integer(c_int32_t) function tecTextSetAnchor( &
    fileHandle, &
    anchor) &
    bind(c, name="tecTextSetAnchor")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: anchor
end function tecTextSetAnchor

integer(c_int32_t) function tecTextSetAngle( &
    fileHandle, &
    angle) &
    bind(c, name="tecTextSetAngle")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)    :: fileHandle
    real(c_double), value, intent(in) :: angle
end function tecTextSetAngle

integer(c_int32_t) function tecTextSetClipping( &
    fileHandle, &
    clipping) &
    bind(c, name="tecTextSetClipping")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: clipping
end function tecTextSetClipping

integer(c_int32_t) function tecTextSetColor( &
    fileHandle, &
    color) &
    bind(c, name="tecTextSetColor")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: color
end function tecTextSetColor

integer(c_int32_t) function tecTextSetTypeface( &
    fileHandle, &
    family, &
    isBold, &
    isItalic) &
    bind(c, name="tecTextSetTypeface")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    character(c_char), intent(in)         :: family(*)
    integer(c_int32_t), value, intent(in) :: isBold
    integer(c_int32_t), value, intent(in) :: isItalic
end function tecTextSetTypeface

integer(c_int32_t) function tecTextSetLineSpacing( &
    fileHandle, &
    lineSpacing) &
    bind(c, name="tecTextSetLineSpacing")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)    :: fileHandle
    real(c_double), value, intent(in) :: lineSpacing
end function tecTextSetLineSpacing

integer(c_int32_t) function tecTextSetMacroFunctionCmd( &
    fileHandle, &
    macroFunctionCmd) &
    bind(c, name="tecTextSetMacroFunctionCmd")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in) :: fileHandle
    character(c_char), intent(in)  :: macroFunctionCmd(*)
end function tecTextSetMacroFunctionCmd

integer(c_int32_t) function tecTextSetScope( &
    fileHandle, &
    scope) &
    bind(c, name="tecTextSetScope")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: scope
end function tecTextSetScope

integer(c_int32_t) function tecTextEnd( &
    fileHandle) &
    bind(c, name="tecTextEnd")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in) :: fileHandle
end function tecTextEnd

integer(c_int32_t) function tecUserRecAdd( &
    fileHandle, &
    userRec) &
    bind(c, name="tecUserRecAdd")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in) :: fileHandle
    character(c_char), intent(in)  :: userRec(*)
end function tecUserRecAdd
    
integer(c_int32_t) function tecFileWriterFlush( &
    fileHandle, &
    numZonesToRetain, &
    zonesToRetain) &
    bind(c, name="tecFileWriterFlush")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: numZonesToRetain
    integer(c_int32_t), intent(in)        :: zonesToRetain(*)
end function tecFileWriterFlush

integer(c_int32_t) function tecFileWriterClose( &
    fileHandle) &
    bind(c, name="tecFileWriterClose")
    use iso_c_binding
    implicit none
    type(c_ptr), intent(inout) :: fileHandle
end function tecFileWriterClose

! Input routine interfaces
integer(c_int32_t) function tecCustomLabelsGetNumSets( &
  fileHandle, &
  numSets) &
  bind (c, name="tecCustomLabelsGetNumSets")
  use iso_c_binding
  implicit none
  type(c_ptr), value , intent(in) :: fileHandle
  integer(c_int32_t), intent(out) :: numSets
end function tecCustomLabelsGetNumSets

integer(c_int32_t) function tecCustomLabelsGetSet( &
  fileHandle, &
  whichSet, &
  labelSet) &
  bind (c, name="tecCustomLabelsGetSet")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)         :: fileHandle
  integer(c_int32_t), value , intent(in) :: whichSet
  type(c_ptr), intent(out)               :: labelSet
end function tecCustomLabelsGetSet

integer(c_int32_t) function tecDataSetAuxDataGetItem( &
  fileHandle, &
  whichItem, &
  name, &
  value) &
  bind (c, name="tecDataSetAuxDataGetItem")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: whichItem
  type(c_ptr), intent(out)              :: name
  type(c_ptr), intent(out)              :: value
end function tecDataSetAuxDataGetItem

integer(c_int32_t) function tecDataSetAuxDataGetNumItems( &
  fileHandle, &
  numItems) &
  bind (c, name="tecDataSetAuxDataGetNumItems")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)  :: fileHandle
  integer(c_int32_t), intent(out) :: numItems
end function tecDataSetAuxDataGetNumItems

integer(c_int32_t) function tecDataSetGetNumVars( &
  fileHandle, &
  numVars) &
  bind (c, name="tecDataSetGetNumVars")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)  :: fileHandle
  integer(c_int32_t), intent(out) :: numVars
end function tecDataSetGetNumVars
